--- a/css/styles.css
+++ b/css/styles.css
@@ -51,7 +51,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 /* ====================== Navigation ====================== */
 nav {
   width: 100%;
-  height: 80px;
+  height: 40px;
   background-color: #252831;
   text-align:center;
 }
@@ -136,6 +136,8 @@ nav h1 a {
   margin: 0;
   padding: 30px 15px 60px;
   text-align: center;
+  display: flex;
+  flex-wrap: wrap;
 }
 #restaurants-list li {
   background-color: #fff;
@@ -273,3 +275,23 @@ nav h1 a {
 #restaurant-hours td {
   color: #666;
 }
+
+/* ====================== Responsive Styles ====================== */
+
+/* @media screen and (max-width: 450px) {
+  nav {
+    height: 40px;
+  }
+  nav h1 a {
+    font-size: 10pt;
+    letter-spacing: 4px;
+  }
+}
+
+@media screen and (min-width: 550px) {
+  
+}
+
+@media screen and (min-width: 700px) {
+  
+} */
