fix: fix style in restaurant page for desktop

--- a/css/styles.css
+++ b/css/styles.css
@@ -66,12 +66,12 @@ nav h1 a {
   text-transform: uppercase;
 }
 #breadcrumb {
+    background-color: #f3f3f3;
     padding: 10px 40px 16px;
     list-style: none;
-    background-color: #eee;
     font-size: 17px;
     margin: 0;
-    width: calc(50% - 80px);
+    width: 100%;
 }
 
 /* Display list items side by side */
@@ -208,7 +208,7 @@ nav h1 a {
   background: blue none repeat scroll 0 0;
   height: 87%;
   position: fixed;
-  right: 0;
+  right: 35px;
   top: 80px;
   width: 50%;
 }
@@ -220,7 +220,7 @@ nav h1 a {
 .inside #footer {
   bottom: 0;
   position: absolute;
-  width: 50%;
+  width: 100%;
 }
 #restaurant-name {
   color: #f18200;
