feat: add aria labels for a11y

--- a/css/styles.css
+++ b/css/styles.css
@@ -170,7 +170,7 @@ nav h1 a {
   min-height: 248px;
   min-width: 100%;
 }
-#restaurants-list li h1 {
+#restaurants-list li h3 {
   color: #f18200;
   font-family: Arial,sans-serif;
   font-size: 14pt;
@@ -324,6 +324,45 @@ nav h1 a {
     font-size: 6.5pt;
     letter-spacing: 0px;
     padding: 5px 0;
+    z-index: 1000;
+  }
+
+  .inside #maincontent {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 100px 0 0 0;
+  }
+
+  .inside #map-container {
+    height: 50%;
+    width: 100%;
+    right: unset;
+    top: unset;
+  }
+
+  .inside #restaurant-container {
+    width: 100%;
+    margin: 320px 0 0 0;
+    background-color: #f3f3f3;
+    padding: 10px 0 20px 20px;
+    z-index: 900; /* above map but under header */
+  }
+
+  .inside #reviews-container {
+    width: 100%;
+    background-color: #f3f3f3;
+    padding: 20px 0 0 20px;
+    z-index: 900; /* above map but under header */
+  }
+
+  .inside #restaurant-name,
+  .inside #restaurant-img,
+  .inside #restaurant-address,
+  .inside #restaurant-hours,
+  .inside #reviews-container {
+    background-color: #f3f3f3;
+    margin: 0;
+    padding: 10px;
   }
 }
 
