--- a/css/styles.css
+++ b/css/styles.css
@@ -71,7 +71,6 @@ nav h1 a {
     list-style: none;
     font-size: 17px;
     margin: 0;
-    width: 100%;
 }
 
 /* Display list items side by side */
@@ -108,6 +107,9 @@ nav h1 a {
   background-color: #ccc;
 }
 
+.leaflet-control {
+  display: none;
+}
 /* ====================== Restaurant Container ====================== */
 #restaurants-container {
 
@@ -199,23 +201,23 @@ nav h1 a {
 
 /* ====================== Restaurant Details ====================== */
 .inside header {
-  position: fixed;
+  position: absolute;
   top: 0;
   width: 100%;
   z-index: 1000;
 }
 .inside #map-container {
-  background: blue none repeat scroll 0 0;
+  background: #f3f3f3 none repeat scroll 0 0;
   height: 87%;
-  position: fixed;
-  right: 35px;
+  position: absolute;
+  right: 0;
   top: 80px;
   width: 50%;
 }
 .inside #map {
   background-color: #ccc;
-  height: 100%;
   width: 100%;
+  height: 100%;
 }
 .inside #footer {
   bottom: 0;
@@ -266,6 +268,7 @@ nav h1 a {
   font-weight: 300;
   letter-spacing: -1px;
   padding-bottom: 1pt;
+  text-align: center;
 }
 #reviews-list {
   margin: 0;
@@ -278,7 +281,7 @@ nav h1 a {
   list-style-type: none;
   margin: 0 0 30px;
   overflow: hidden;
-  padding: 0 20px 20px;
+  padding: 20px 20px 20px;
   position: relative;
   width: 85%;
 }
@@ -340,11 +343,15 @@ nav h1 a {
     top: unset;
   }
 
+  .inside #map {
+    height: 50%;
+  }
+
   .inside #restaurant-container {
     width: 100%;
     margin: 320px 0 0 0;
     background-color: #f3f3f3;
-    padding: 10px 0 20px 20px;
+    padding-top: 0;
     z-index: 900; /* above map but under header */
   }
 
@@ -353,6 +360,11 @@ nav h1 a {
     background-color: #f3f3f3;
     padding: 20px 0 0 20px;
     z-index: 900; /* above map but under header */
+  }
+
+  .inside #restaurant-name {
+    font-size: 16pt;
+    text-align: center;
   }
 
   .inside #restaurant-name,
@@ -371,7 +383,10 @@ nav h1 a {
 }
 
 @media screen and (min-width: 700px) {
-  
+  #restaurant-container, 
+  #reviews-container {
+    padding: 75px 10px 10px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
